# myfs

./: .gitignore  CMakeLists.txt
declare/: dentry.h  errnum.h  fs.h  global.h  inode.h  myfile.h
imp/: dirdata.h  foperator.h  fs.h  fsop.c  inode.c  inode.h  myfile.c  myfile.h
test/: test.c
